--- a/04-prompt-engineering-fundamentals/python/aoai-assignment.ipynb
+++ b/04-prompt-engineering-fundamentals/python/aoai-assignment.ipynb
@@ -26,9 +26,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[198, 41, 20089, 374, 279, 18172, 11841, 505, 279, 8219, 323, 279, 7928, 304, 279, 25450, 744, 13, 1102, 374, 264, 6962, 14880, 449, 264, 3148, 832, 7716, 52949, 339, 430, 315, 279, 8219, 11, 719, 1403, 9976, 7561, 34902, 3115, 430, 315, 682, 279, 1023, 33975, 304, 279, 25450, 744, 11093, 13, 50789, 374, 832, 315, 279, 72021, 6302, 9621, 311, 279, 19557, 8071, 304, 279, 3814, 13180, 11, 323, 706, 1027, 3967, 311, 14154, 86569, 2533, 1603, 12715, 3925, 13, 1102, 374, 7086, 1306, 279, 13041, 10087, 50789, 8032, 777, 60, 3277, 19894, 505, 9420, 11, 50789, 649, 387, 10107, 3403, 369, 1202, 27000, 3177, 311, 6445, 9621, 35612, 17706, 508, 60, 323, 374, 389, 5578, 279, 4948, 1481, 1315, 478, 5933, 1665, 304, 279, 3814, 13180, 1306, 279, 17781, 323, 50076, 627]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[b'\\n',\n",
+       " b'J',\n",
+       " b'upiter',\n",
+       " b' is',\n",
+       " b' the',\n",
+       " b' fifth',\n",
+       " b' planet',\n",
+       " b' from',\n",
+       " b' the',\n",
+       " b' Sun',\n",
+       " b' and',\n",
+       " b' the',\n",
+       " b' largest',\n",
+       " b' in',\n",
+       " b' the',\n",
+       " b' Solar',\n",
+       " b' System',\n",
+       " b'.',\n",
+       " b' It',\n",
+       " b' is',\n",
+       " b' a',\n",
+       " b' gas',\n",
+       " b' giant',\n",
+       " b' with',\n",
+       " b' a',\n",
+       " b' mass',\n",
+       " b' one',\n",
+       " b'-th',\n",
+       " b'ousand',\n",
+       " b'th',\n",
+       " b' that',\n",
+       " b' of',\n",
+       " b' the',\n",
+       " b' Sun',\n",
+       " b',',\n",
+       " b' but',\n",
+       " b' two',\n",
+       " b'-and',\n",
+       " b'-a',\n",
+       " b'-half',\n",
+       " b' times',\n",
+       " b' that',\n",
+       " b' of',\n",
+       " b' all',\n",
+       " b' the',\n",
+       " b' other',\n",
+       " b' planets',\n",
+       " b' in',\n",
+       " b' the',\n",
+       " b' Solar',\n",
+       " b' System',\n",
+       " b' combined',\n",
+       " b'.',\n",
+       " b' Jupiter',\n",
+       " b' is',\n",
+       " b' one',\n",
+       " b' of',\n",
+       " b' the',\n",
+       " b' brightest',\n",
+       " b' objects',\n",
+       " b' visible',\n",
+       " b' to',\n",
+       " b' the',\n",
+       " b' naked',\n",
+       " b' eye',\n",
+       " b' in',\n",
+       " b' the',\n",
+       " b' night',\n",
+       " b' sky',\n",
+       " b',',\n",
+       " b' and',\n",
+       " b' has',\n",
+       " b' been',\n",
+       " b' known',\n",
+       " b' to',\n",
+       " b' ancient',\n",
+       " b' civilizations',\n",
+       " b' since',\n",
+       " b' before',\n",
+       " b' recorded',\n",
+       " b' history',\n",
+       " b'.',\n",
+       " b' It',\n",
+       " b' is',\n",
+       " b' named',\n",
+       " b' after',\n",
+       " b' the',\n",
+       " b' Roman',\n",
+       " b' god',\n",
+       " b' Jupiter',\n",
+       " b'.[',\n",
+       " b'19',\n",
+       " b']',\n",
+       " b' When',\n",
+       " b' viewed',\n",
+       " b' from',\n",
+       " b' Earth',\n",
+       " b',',\n",
+       " b' Jupiter',\n",
+       " b' can',\n",
+       " b' be',\n",
+       " b' bright',\n",
+       " b' enough',\n",
+       " b' for',\n",
+       " b' its',\n",
+       " b' reflected',\n",
+       " b' light',\n",
+       " b' to',\n",
+       " b' cast',\n",
+       " b' visible',\n",
+       " b' shadows',\n",
+       " b',[',\n",
+       " b'20',\n",
+       " b']',\n",
+       " b' and',\n",
+       " b' is',\n",
+       " b' on',\n",
+       " b' average',\n",
+       " b' the',\n",
+       " b' third',\n",
+       " b'-b',\n",
+       " b'right',\n",
+       " b'est',\n",
+       " b' natural',\n",
+       " b' object',\n",
+       " b' in',\n",
+       " b' the',\n",
+       " b' night',\n",
+       " b' sky',\n",
+       " b' after',\n",
+       " b' the',\n",
+       " b' Moon',\n",
+       " b' and',\n",
+       " b' Venus',\n",
+       " b'.\\n']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXERCISE:\n",
     "# 1. Run the exercise as is first\n",
@@ -72,9 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Must provide either the `api_version` argument or the `OPENAI_API_VERSION` environment variable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[0;32m      8\u001b[0m load_dotenv()\n\u001b[1;32m---> 10\u001b[0m client \u001b[38;5;241m=\u001b[39m \u001b[43mAzureOpenAI\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m  \u001b[49m\u001b[43mapi_key\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mOPENAI_API_KEY\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# this is also the default, it can be omitted\u001b[39;49;00m\n\u001b[0;32m     12\u001b[0m \u001b[43m  \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m deployment\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAZURE_OPENAI_DEPLOYMENT\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m## Updated\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\mikea\\miniconda3\\Lib\\site-packages\\openai\\lib\\azure.py:177\u001b[0m, in \u001b[0;36mAzureOpenAI.__init__\u001b[1;34m(self, api_version, azure_endpoint, azure_deployment, api_key, azure_ad_token, azure_ad_token_provider, organization, project, base_url, timeout, max_retries, default_headers, default_query, http_client, _strict_response_validation)\u001b[0m\n\u001b[0;32m    174\u001b[0m     api_version \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_VERSION\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    176\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m api_version \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 177\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    178\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMust provide either the `api_version` argument or the `OPENAI_API_VERSION` environment variable\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    179\u001b[0m     )\n\u001b[0;32m    181\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m default_query \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    182\u001b[0m     default_query \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapi-version\u001b[39m\u001b[38;5;124m\"\u001b[39m: api_version}\n",
+      "\u001b[1;31mValueError\u001b[0m: Must provide either the `api_version` argument or the `OPENAI_API_VERSION` environment variable"
+     ]
+    }
+   ],
    "source": [
     "# The OpenAI SDK was updated on Nov 8, 2023 with new guidance for migration\n",
     "# See: https://github.com/openai/openai-python/discussions/742\n",
@@ -251,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
