--- a/04-prompt-engineering-fundamentals/python/aoai-assignment.ipynb
+++ b/04-prompt-engineering-fundamentals/python/aoai-assignment.ipynb
@@ -224,19 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Must provide either the `api_version` argument or the `OPENAI_API_VERSION` environment variable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[0;32m      8\u001b[0m load_dotenv()\n\u001b[1;32m---> 10\u001b[0m client \u001b[38;5;241m=\u001b[39m \u001b[43mAzureOpenAI\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m  \u001b[49m\u001b[43mapi_key\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mOPENAI_API_KEY\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# this is also the default, it can be omitted\u001b[39;49;00m\n\u001b[0;32m     12\u001b[0m \u001b[43m  \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m deployment\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAZURE_OPENAI_DEPLOYMENT\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m## Updated\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\mikea\\miniconda3\\Lib\\site-packages\\openai\\lib\\azure.py:177\u001b[0m, in \u001b[0;36mAzureOpenAI.__init__\u001b[1;34m(self, api_version, azure_endpoint, azure_deployment, api_key, azure_ad_token, azure_ad_token_provider, organization, project, base_url, timeout, max_retries, default_headers, default_query, http_client, _strict_response_validation)\u001b[0m\n\u001b[0;32m    174\u001b[0m     api_version \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_VERSION\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    176\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m api_version \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 177\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    178\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMust provide either the `api_version` argument or the `OPENAI_API_VERSION` environment variable\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    179\u001b[0m     )\n\u001b[0;32m    181\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m default_query \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    182\u001b[0m     default_query \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapi-version\u001b[39m\u001b[38;5;124m\"\u001b[39m: api_version}\n",
-      "\u001b[1;31mValueError\u001b[0m: Must provide either the `api_version` argument or the `OPENAI_API_VERSION` environment variable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Live and learn, from the works of yesterday\n",
+      "Live and learn, if you beg or if you borrow\n",
+      "Live and learn, you may never find your way\n"
      ]
     }
    ],
@@ -244,35 +241,35 @@
     "# The OpenAI SDK was updated on Nov 8, 2023 with new guidance for migration\n",
     "# See: https://github.com/openai/openai-python/discussions/742\n",
     "\n",
-    "## Updated\n",
+    "## Edited so OpenAI can be used instead of Azure\n",
     "import os\n",
-    "from openai import AzureOpenAI\n",
+    "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
-    "client = AzureOpenAI(\n",
-    "  api_key=os.environ['AZURE_OPENAI_KEY'],  # this is also the default, it can be omitted\n",
-    "  api_version = \"2023-05-15\"\n",
-    "  )\n",
+    "# Initialize the OpenAI client using the OpenAI API key\n",
+    "client = OpenAI(\n",
+    "  api_key=os.environ['OPENAI_API_KEY'],  # this is also the default, it can be omitted\n",
+    ")\n",
     "\n",
-    "deployment=os.environ['AZURE_OPENAI_DEPLOYMENT']\n",
-    "\n",
-    "## Updated\n",
+    "## Updated for OpenAI instead of Azure\n",
     "def get_completion(prompt):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]       \n",
-    "    response = client.chat.completions.create(   \n",
-    "        model=deployment,                                         \n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4\",  # Specify the model you want to use, e.g., 'gpt-4'\n",
     "        messages=messages,\n",
-    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "        temperature=0,  # This is the degree of randomness of the model's output\n",
     "        max_tokens=1024\n",
     "    )\n",
     "    return response.choices[0].message.content\n",
     "\n",
-    "## ---------- Call the helper method\n",
+    "# ---------- Call the helper method\n",
+    "\n",
     "\n",
     "### 1. Set primary content or prompt text\n",
     "text = f\"\"\"\n",
-    "oh say can you see\n",
+    "live and learn, hanging on the edge of tomorrow\n",
+    "Continur the lyrics\n",
     "\"\"\"\n",
     "\n",
     "### 2. Use that in the prompt template below\n",
@@ -295,9 +292,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lesson Plan: The Martian War of 2076\n",
+      "\n",
+      "Grade Level: High School (Grades 9-12)\n",
+      "\n",
+      "Subject: History, Social Studies\n",
+      "\n",
+      "Duration: 1 Week (5 sessions of 45 minutes each)\n",
+      "\n",
+      "Learning Objectives:\n",
+      "1. Understand the causes and consequences of the Martian War of 2076.\n",
+      "2. Analyze the key events and turning points of the war.\n",
+      "3. Evaluate the impact of the war on Earth and Mars relations.\n",
+      "4. Develop critical thinking skills through analysis of primary and secondary sources.\n",
+      "5. Improve communication skills through class discussions and presentations.\n",
+      "\n",
+      "Materials Needed:\n",
+      "1. Textbook chapters on the Martian War of 2076\n",
+      "2. Primary and secondary sources (letters, diaries, news articles, documentaries)\n",
+      "3. Computer with internet access for research\n",
+      "4. Projector for presentations\n",
+      "\n",
+      "Lesson Procedure:\n",
+      "\n",
+      "Day 1: Introduction to the Martian War of 2076\n",
+      "1. Begin with a brief lecture on the background of Earth-Mars relations leading up to the war.\n",
+      "2. Discuss the causes of the war, including political, economic, and social factors.\n",
+      "3. Assign reading homework from the textbook on the causes of the war.\n",
+      "\n",
+      "Day 2: Key Events and Turning Points\n",
+      "1. Start with a review of the previous day's reading.\n",
+      "2. Discuss the major events and turning points of the war, using a timeline for visual aid.\n",
+      "3. Show a documentary on the Martian War of 2076 to provide a more detailed and visual understanding.\n",
+      "4. Assign reading homework on the key events of the war.\n",
+      "\n",
+      "Day 3: Consequences of the War\n",
+      "1. Review the key events of the war.\n",
+      "2. Discuss the immediate and long-term consequences of the war on both Earth and Mars.\n",
+      "3. Have students break into small groups and analyze different primary and secondary sources on the consequences of the war.\n",
+      "4. Assign a short essay on the impact of the war.\n",
+      "\n",
+      "Day 4: Class Discussion and Debate\n",
+      "1. Begin with a review of the consequences of the war.\n",
+      "2. Facilitate a class discussion on the war, encouraging students to share their thoughts and opinions.\n",
+      "3. Organize a debate on a controversial topic related to the war, such as \"Was the Martian War of 2076 avoidable?\" or \"Who was the real winner of the war?\"\n",
+      "\n",
+      "Day 5: Student Presentations\n",
+      "1. Have students present their essays in front of the class.\n",
+      "2. Encourage students to ask questions and provide feedback on each other's presentations.\n",
+      "3. Conclude the lesson with a summary of the Martian War of 2076 and its significance in history.\n",
+      "\n",
+      "Assessment:\n",
+      "1. Participation in class discussions and debates (20%)\n",
+      "2. Analysis of primary and secondary sources (30%)\n",
+      "3. Short essay on the impact of the war (30%)\n",
+      "4. Presentation of the essay (20%)\n",
+      "\n",
+      "Homework:\n",
+      "1. Reading assignments on the causes, key events, and consequences of the war.\n",
+      "2. Short essay on the impact of the war.\n",
+      "\n",
+      "References:\n",
+      "1. Textbook chapters on the Martian War of 2076\n",
+      "2. Documentaries and news articles on the war\n",
+      "3. Primary sources (letters, diaries) from the time of the war.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "## Set the text for simple prompt or primary content\n",
@@ -328,9 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupiter is the biggest planet in our Solar System and the fifth one from the Sun. It's made mostly of gas and is much bigger than all the other planets combined. We can see Jupiter from Earth because it shines very brightly in the night sky. People have known about Jupiter for a very long time, even before they wrote things down. It's named after a god from Roman stories. When we look at Jupiter from Earth, it can be so bright that it can make shadows. It's usually the third-brightest thing we can see in the night sky, after the Moon and Venus.\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Example\n",
     "# https://platform.openai.com/playground/p/default-summarize\n",
@@ -375,17 +451,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, for real!\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.chat.completions.create(\n",
-    "    model=deployment,\n",
+    "    model=\"gpt-4\",\n",
     "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are a sarcastic assistant.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Who won the world series in 2020?\"},\n",
-    "        {\"role\": \"assistant\", \"content\": \"Who do you think won? The Los Angeles Dodgers of course.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Where was it played?\"}\n",
+    "        {\"role\": \"system\", \"content\": \"You are a yes-man assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Does Michelle like Quincy?\"},\n",
+    "        {\"role\": \"assistant\", \"content\": \"Yes!\"},\n",
+    "        {\"role\": \"user\", \"content\": \"For real??\"}\n",
     "    ]\n",
     ")\n",
     "print(response.choices[0].message.content)"
