--- a/07-building-chat-applications/python/oai-assignment.ipynb
+++ b/07-building-chat-applications/python/oai-assignment.ipynb
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "gather": {
           "logged": 1674829434433
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "gather": {
           "logged": 1674742720788
@@ -205,7 +205,7 @@
       "outputs": [],
       "source": [
         "# Select the General Purpose curie model for text\n",
-        "model = \"gpt-3.5-turbo\""
+        "model = \"gpt-4o\""
       ]
     },
     {
@@ -273,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "gather": {
           "logged": 1674494935186
@@ -288,16 +288,26 @@
           }
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'- Should - Ought to, Need to, Must, Have to\\n- Oxford - Serial, Harvard, Series \\n- Commas - Punctuation marks, Separators, Dividers\\n- Always - Consistently, Continually, Perpetually\\n- Be - Exist, Remain, Stay\\n- Used - Utilized, Employed, Applied'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create your first prompt\n",
         "text_prompt = \"Should oxford commas always be used?\"\n",
         "\n",
         "response = client.chat.completions.create(\n",
         "  model=model,\n",
-        "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant.\"},\n",
+        "  messages = [{\"role\":\"system\", \"content\":\"You are an assistant that lists synonyms to each word in the sentence in bullet point format. For example: A sentence is (How are you) and you would output: (How - In what matter, The matter in which; Are - Do you, Is; You - Thine, Yours)\"},\n",
         "               {\"role\":\"user\",\"content\":text_prompt},])\n",
-        "\n",
         "response.choices[0].message.content"
       ]
     },
@@ -317,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "gather": {
           "logged": 1674494940872
@@ -332,7 +342,18 @@
           }
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Whether to use the Oxford comma (also known as the serial comma) can depend on the style guide you\\'re following or personal preference. Here are a few points to consider:\\n\\n1. **Clarity**: The Oxford comma can help avoid ambiguity. For example:\\n   - Without Oxford comma: \"I love my parents, Oprah Winfrey and God.\"\\n   - With Oxford comma: \"I love my parents, Oprah Winfrey, and God.\"\\n\\n2. **Consistency**: Some style guides recommend always using the Oxford comma for the sake of consistency. The Chicago Manual of Style and the MLA (Modern Language Association) recommend using it, while the Associated Press (AP) Stylebook advises against it in most cases.\\n\\n3. **Formality**: In more formal writing, using the Oxford comma is often preferred for precision and clarity.\\n\\nUltimately, the choice is yours, but it\\'s important to be consistent in your usage once you decide.'"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "\n",
         "response = client.chat.completions.create(\n",
@@ -384,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "gather": {
           "logged": 1674495198534
@@ -406,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "gather": {
           "logged": 1674495201868
@@ -421,13 +442,24 @@
           }
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Subject: Natural Language Processing (NLP) Model Training Techniques'"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#Setting a few additional, typical parameters during API Call\n",
         "\n",
         "response = client.chat.completions.create(\n",
         "  model=model,\n",
-        "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant.\"},\n",
+        "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant who classifies the text under a single subject.\"},\n",
         "               {\"role\":\"user\",\"content\":prompt},])\n",
         "\n",
         "response.choices[0].message.content"
@@ -455,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "gather": {
           "logged": 1674499424645
@@ -470,7 +502,19 @@
           }
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Classify the following inquiry into one of the following: categories: [Pricing, Hardware Support, Software Support]\n",
+            "\n",
+            "inquiry: Hello, one of the keys on my laptop keyboard broke recently and I'll need a replacement:\n",
+            "\n",
+            "Classified category:\n"
+          ]
+        }
+      ],
       "source": [
         "prompt = \"Classify the following inquiry into one of the following: categories: [Pricing, Hardware Support, Software Support]\\n\\ninquiry: Hello, one of the keys on my laptop keyboard broke recently and I'll need a replacement:\\n\\nClassified category:\"\n",
         "print(prompt)"
@@ -478,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "gather": {
           "logged": 1674499378518
@@ -493,7 +537,18 @@
           }
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Classified category: Hardware Support'"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#Setting a few additional, typical parameters during API Call\n",
         "\n",
@@ -530,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "gather": {
           "logged": 1674257087279
@@ -545,7 +600,20 @@
           }
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Product description: A home milkshake maker\n",
+            "Seed words: fast, healthy, compact.\n",
+            "Product names: HomeShaker, Fit Shaker, QuickShake, Shake Maker\n",
+            "\n",
+            "Product description: A pair of shoes that can fit any foot size.\n",
+            "Seed words: adaptable, fit, omni-fit.\n"
+          ]
+        }
+      ],
       "source": [
         "prompt = \"Product description: A home milkshake maker\\nSeed words: fast, healthy, compact.\\nProduct names: HomeShaker, Fit Shaker, QuickShake, Shake Maker\\n\\nProduct description: A pair of shoes that can fit any foot size.\\nSeed words: adaptable, fit, omni-fit.\"\n",
         "\n",
@@ -554,7 +622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false,
@@ -566,16 +634,34 @@
           }
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Product Name Ideas:\\n\\n1. Adaptashoes\\n2. OmniFit Kicks\\n3. FlexiStep\\n4. FitAll Footwear\\n5. VersaShoes\\n6. UbiquiFit Shoes\\n7. AllSize Sneaks\\n8. FitFlex Shoes'"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#Setting a few additional, typical parameters during API Call\n",
         "\n",
         "response = client.chat.completions.create(\n",
         "  model=model,\n",
-        "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant.\"},\n",
+        "  messages = [{\"role\":\"system\", \"content\":\"You are a helpful assistant who wants to make a new name for a product based on the informationn given.\"},\n",
         "               {\"role\":\"user\",\"content\":prompt}])\n",
         "\n",
         "response.choices[0].message.content"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\"Product Description for HomeShaker:\\n\\nIntroducing the HomeShaker, your ultimate kitchen companion for creating delicious and nutritious milkshakes in no time! Designed to be fast, healthy, and compact, this powerful milkshake maker allows you to whip up your favorite shakes effortlessly. Whether you crave a fruity, protein-packed, or indulgent chocolate shake, the HomeShaker can handle it all. Its sleek, space-saving design ensures it fits perfectly in any kitchen, making it the ideal appliance for quick and healthy beverage options.\\n\\n---\\n\\nProduct Description for Shoes:\\n\\nDiscover the OmniFit Shoes, the revolutionary footwear that adapts to fit any foot size perfectly. Engineered with cutting-edge adaptable technology, these shoes ensure a custom fit for everyone. Say goodbye to the hassle of finding the right shoe size or dealing with uncomfortable fits. Whether you're heading for a run, a hike, or a casual outing, the OmniFit Shoes provide unmatched comfort and support for every step you take. Experience the evolution of footwear with a pair of shoes that truly understands your feet.\""
       ]
     },
     {
@@ -645,7 +731,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.12.4"
     },
     "microsoft": {
       "host": {
