--- a/06-text-generation-apps/python/aoai-assignment.ipynb
+++ b/06-text-generation-apps/python/aoai-assignment.ipynb
@@ -188,14 +188,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openai in c:\\users\\mikea\\miniconda3\\lib\\site-packages (1.35.13)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (4.4.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (0.27.0)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (2.8.2)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (4.66.4)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.7 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (4.12.2)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (3.7)\n",
+      "Requirement already satisfied: certifi in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (2024.6.2)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (1.0.5)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.20.1 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (2.20.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create virtual environment\n",
     "! python -m venv venv\n",
     "# Activate virtual environment\n",
-    "! source venv/bin/activate\n",
+    "! venv\\Scripts\\activate\n",
     "# Install openai package\n",
     "! pip install openai\n",
     "   "
@@ -221,29 +243,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "echoing in my heart, deep and resonant, like an old familiar song.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "from openai import AzureOpenAI\n",
+    "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
-    "client = AzureOpenAI(\n",
-    "  azure_endpoint = os.environ[\"AZURE_OPENAI_ENDPOINT\"], \n",
-    "  api_key=os.environ['AZURE_OPENAI_KEY'],  \n",
-    "  api_version = \"2023-10-01-preview\"\n",
-    "  )\n",
-    "\n",
-    "deployment=os.environ['AZURE_OPENAI_DEPLOYMENT']\n",
+    "client = OpenAI(\n",
+    "  api_key=os.environ['OPENAI_API_KEY'],  # this is also the default, it can be omitted\n",
+    ")\n",
     "\n",
     "# add your completion code\n",
-    "prompt = \"Complete the following: Once upon a time there was a\"\n",
+    "prompt = \"Complete the following: tryna strike a chord and its\"\n",
     "messages = [{\"role\": \"user\", \"content\": prompt}]  \n",
     "\n",
     "# make completion\n",
-    "completion = client.chat.completions.create(model=deployment, messages=messages)\n",
+    "completion = client.chat.completions.create(model=\"gpt-4o\", messages=messages)\n",
     "\n",
     "# print response\n",
     "print(completion.choices[0].message.content)"
@@ -442,26 +468,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sure, here are five different recipes using chicken, potatoes, and carrots:\n",
+      "\n",
+      "### Recipe 1: Chicken Stew\n",
+      "**Ingredients:**\n",
+      "- 1 lb chicken breast, cut into bite-sized pieces\n",
+      "- 4 medium potatoes, peeled and diced\n",
+      "- 3 large carrots, peeled and sliced\n",
+      "- 1 onion, chopped\n",
+      "- 3 garlic cloves, minced\n",
+      "- 4 cups chicken broth\n",
+      "- 1 cup frozen peas\n",
+      "- 2 tbsp olive oil\n",
+      "- 1 tsp dried thyme\n",
+      "- 1 tsp dried rosemary\n",
+      "- Salt and pepper to taste\n",
+      "- 2 tbsp flour\n",
+      "- 2 tbsp butter\n",
+      "\n",
+      "### Recipe 2: Chicken and Vegetable Bake\n",
+      "**Ingredients:**\n",
+      "- 1 lb chicken thighs, bone-in, skin-on\n",
+      "- 4 medium potatoes, cut into wedges\n",
+      "- 3 large carrots, cut into sticks\n",
+      "- 3 cloves garlic, minced\n",
+      "- 1 red bell pepper, sliced\n",
+      "- 1 tbsp olive oil\n",
+      "- 1 tsp paprika\n",
+      "- 1 tsp dried oregano\n",
+      "- Salt and pepper to taste\n",
+      "- Fresh parsley for garnish\n",
+      "\n",
+      "### Recipe 3: Chicken Pot Pie\n",
+      "**Ingredients:**\n",
+      "- 1 lb cooked chicken breast, shredded or cubed\n",
+      "- 4 medium potatoes, diced\n",
+      "- 3 large carrots, diced\n",
+      "- 1 cup frozen peas\n",
+      "- 1 onion, chopped\n",
+      "- 2 cups chicken broth\n",
+      "- 1 cup milk\n",
+      "- 1/4 cup flour\n",
+      "- 1/4 cup butter\n",
+      "- 1 tsp dried thyme\n",
+      "- Salt and pepper to taste\n",
+      "- 2 store-bought pie crusts\n",
+      "\n",
+      "### Recipe 4: Chicken and Potato Soup\n",
+      "**Ingredients:**\n",
+      "- 1 lb chicken breast, cut into bite-sized pieces\n",
+      "- 4 medium potatoes, peeled and diced\n",
+      "- 3 large carrots, peeled and chopped\n",
+      "- 1 onion, chopped\n",
+      "- 3 garlic cloves, minced\n",
+      "- 4 cups chicken broth\n",
+      "- 1 cup heavy cream\n",
+      "- 2 tbsp flour\n",
+      "- 2 tbsp butter\n",
+      "- 1 tsp dried thyme\n",
+      "- 1 tsp dried basil\n",
+      "- Salt and pepper to taste\n",
+      "- 2 tbsp chopped fresh parsley\n",
+      "\n",
+      "### Recipe 5: Roasted Chicken with Potatoes and Carrots\n",
+      "**Ingredients:**\n",
+      "- 1 whole chicken (about 4 lbs)\n",
+      "- 4 medium potatoes, quartered\n",
+      "- 3 large carrots, cut into chunks\n",
+      "- 1 onion, quartered\n",
+      "- 4 cloves garlic, minced\n",
+      "- 3 tbsp olive oil\n",
+      "- 1 tsp dried rosemary\n",
+      "- 1 tsp dried thyme\n",
+      "- Salt and pepper to taste\n",
+      "- 1 lemon, halved\n",
+      "- Fresh parsley for garnish\n",
+      "\n",
+      "Feel free to ask for specific cooking instructions for any of these recipes!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "from openai import AzureOpenAI\n",
+    "from openai import OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
-    "client = AzureOpenAI(\n",
-    "  azure_endpoint = os.environ[\"AZURE_OPENAI_ENDPOINT\"], \n",
-    "  api_key=os.environ['AZURE_OPENAI_KEY'],  \n",
-    "  api_version = \"2023-10-01-preview\"\n",
-    "  )\n",
-    "\n",
-    "deployment=os.environ['AZURE_OPENAI_DEPLOYMENT']\n",
+    "client = OpenAI(\n",
+    "  api_key=os.environ['OPENAI_API_KEY'],  # this is also the default, it can be omitted\n",
+    ")\n",
     "\n",
     "prompt = \"Show me 5 recipes for a dish with the following ingredients: chicken, potatoes, and carrots. Per recipe, list all the ingredients used\"\n",
     "messages = [{\"role\": \"user\", \"content\": prompt}]  \n",
     "\n",
     "# make completion\n",
-    "completion = client.chat.completions.create(model=deployment, messages=messages, max_tokens=600)\n",
+    "completion = client.chat.completions.create(model='gpt-4o', messages=messages, max_tokens=600)\n",
     "\n",
     "# print response\n",
     "print(completion.choices[0].message.content)"
@@ -497,31 +605,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from openai import AzureOpenAI\n",
+    "from openai import OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
-    "client = AzureOpenAI(\n",
-    "  azure_endpoint = os.environ[\"AZURE_OPENAI_ENDPOINT\"], \n",
-    "  api_key=os.environ['AZURE_OPENAI_KEY'],  \n",
-    "  api_version = \"2023-10-01-preview\"\n",
-    "  )\n",
+    "client = OpenAI(\n",
+    "  api_key=os.environ['OPENAI_API_KEY'],  # this is also the default, it can be omitted\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_recipes = input(\"No of recipes (for example, 5) : \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "deployment=os.environ['AZURE_OPENAI_DEPLOYMENT']\n",
-    "\n",
-    "no_recipes = input(\"No of recipes (for example, 5: \")\n",
-    "\n",
-    "ingredients = input(\"List of ingredients (for example, chicken, potatoes, and carrots: \")\n",
+    "ingredients = input(\"List of ingredients (for example, chicken, potatoes, and carrots) : \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Certainly! Here is a recipe that creatively combines the ingredients you mentioned into a unique Nigerian-inspired dish:\n",
+      "\n",
+      "### Nigerian Fusion Rice with Meat and Egusi Sauce\n",
+      "\n",
+      "#### Ingredients\n",
+      "- 2 cups of rice\n",
+      "- 1 cup of pasta sauce\n",
+      "- 500 grams of meat (beef, chicken, or goat meat)\n",
+      "- 1 cup of ground egusi (melon seeds)\n",
+      "- 1 onion, chopped\n",
+      "- 2 cloves of garlic, minced\n",
+      "- 1 bell pepper, chopped\n",
+      "- 2 cups of spinach or any leafy vegetable, chopped\n",
+      "- 1/2 cup of palm oil or vegetable oil\n",
+      "- 2 bouillon cubes (Maggi or Knorr)\n",
+      "- Salt and pepper to taste\n",
+      "- 1 teaspoon of ground crayfish (optional)\n",
+      "- 1 teaspoon of ground pepper (optional)\n",
+      "\n",
+      "#### Steps\n",
+      "\n",
+      "1. **Prepare the Meat**:\n",
+      "    - Wash the meat thoroughly and cut it into bite-sized pieces.\n",
+      "    - Season the meat with salt, pepper, and one bouillon cube.\n",
+      "    - In a pot, add a little water and cook the meat until it's tender. This should take about 20-30 minutes depending on the type of meat used.\n",
+      "    - Once cooked, remove the meat and set aside. Reserve the meat stock for later use.\n",
+      "\n",
+      "2. **Cook the Rice**:\n",
+      "    - Rinse the rice under cold water until the water runs clear.\n",
+      "    - In a pot, add 4 cups of water and bring to a boil.\n",
+      "    - Add the rice to the boiling water, reduce the heat to low, cover, and let it simmer for about 15-20 minutes or until the rice is cooked and the water is absorbed.\n",
+      "    - Fluff the rice with a fork and set aside.\n",
+      "\n",
+      "3. **Prepare the Egusi Sauce**:\n",
+      "    - In a separate pot, heat the palm oil or vegetable oil over medium heat.\n",
+      "    - Add the chopped onions and minced garlic. Sauté until fragrant and the onions are translucent.\n",
+      "    - Add the ground egusi and stir continuously to prevent it from burning. Cook for about 5 minutes.\n",
+      "    - Add the pasta sauce, chopped bell pepper, and ground crayfish (if using). Stir well to combine.\n",
+      "    - Pour in the reserved meat stock and bring the mixture to a simmer.\n",
+      "    - Add the cooked meat to the sauce and let it cook for an additional 10 minutes, allowing the flavors to meld together.\n",
+      "    - Add the chopped spinach or leafy vegetable and cook for another 5 minutes until the vegetables are wilted.\n",
+      "    - Season with the remaining bouillon cube, salt, and ground pepper to taste.\n",
+      "\n",
+      "4. **Combine and Serve**:\n",
+      "    - In a large serving dish, layer the cooked rice.\n",
+      "    - Spoon the egusi sauce with meat over the rice.\n",
+      "    - Mix gently to combine or serve the egusi sauce on the side.\n",
+      "    - Enjoy your Nigerian Fusion Rice with Meat and Egusi Sauce!\n",
+      "\n",
+      "This dish brings together the richness of Nigerian egusi soup with the familiar textures of rice and pasta sauce, creating a flavorful and satisfying meal.\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "# interpolate the number of recipes into the prompt an ingredients\n",
-    "prompt = f\"Show me {no_recipes} recipes for a dish with the following ingredients: {ingredients}. Per recipe, list all the ingredients used\"\n",
+    "prompt = f\"Show me {no_recipes} recipes for a Nigerian dish with the following ingredients: {ingredients}. Per recipe, list all the ingredients used and the steps.\"\n",
     "messages = [{\"role\": \"user\", \"content\": prompt}]  \n",
     "\n",
     "# make completion\n",
-    "completion = client.chat.completions.create(model=deployment, messages=messages, max_tokens=600)\n",
+    "completion = client.chat.completions.create(model='gpt-4o', messages=messages, temperature=0.5)\n",
     "\n",
     "# print response\n",
     "print(completion.choices[0].message.content)"
@@ -769,7 +956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
