--- a/07-building-chat-applications/python/oai-assigment-simple.ipynb
+++ b/07-building-chat-applications/python/oai-assigment-simple.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sonic Generations was released in 2011, so it would not have new sales figures specifically for 2014. However, as of March 2012, the game had sold over 1.85 million copies worldwide across all platforms.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create your first prompt\n",
-    "text_prompt = \" My foot hurts, what can be wrong?\"\n",
+    "text_prompt = \" How many copies of Sonic Generations sold in 2014\"\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "  model=model,\n",
     "  messages = [\n",
-    "      {\"role\":\"system\", \"content\":\"I'm a doctor, specialist on surgery\"},\n",
+    "      {\"role\":\"system\", \"content\":\"I'm an expert on all information related to Sonic the Hedgehog\"},\n",
     "      {\"role\":\"user\",\"content\":text_prompt},])\n",
     "\n",
     "response.choices[0].message.content"
@@ -56,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
