--- a/08-building-search-applications/python/oai-solution.ipynb
+++ b/08-building-search-applications/python/oai-solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "\n",
     "model = 'text-embedding-ada-002'\n",
     "\n",
-    "SIMILARITIES_RESULTS_THRESHOLD = 0.75\n",
+    "SIMILARITIES_RESULTS_THRESHOLD = 0.80\n",
     "DATASET_NAME = \"../embedding_index_3m.json\""
    ]
   },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,13 @@
     "1. First, a copy of the Embedding Index is created.\n",
     "2. Next, the Embedding for the query is calculated using the OpenAI Embedding API.\n",
     "3. Then a new column is created in the Embedding Index called `similarity`. The `similarity` column contains the cosine similarity between the query Embedding and the Embedding for each video segment.\n",
-    "4. Next, the Embedding Index is filtered by the `similarity` column. The Embedding Index is filtered to only include videos that have a cosine similarity greater than or equal to 0.75.\n",
+    "4. Next, the Embedding Index is filtered by the `similarity` column. The Embedding Index is filtered to only include videos that have a cosine similarity greater than or equal to 0.85.\n",
     "5. Finally, the Embedding Index is sorted by the `similarity` column and the top 5 videos are returned."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +155,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Videos similar to '':\n",
+      "\n",
+      "Videos similar to 'Who is Archie Sonic':\n",
+      "\n",
+      "Videos similar to 'Who is Archie Sonic':\n",
+      "\n",
+      "Videos similar to 'What is Archie Sonic':\n",
+      "\n",
+      "Videos similar to 'Azure Learning':\n",
+      " - Run Azure Machine Learning anywhere\n",
+      "   Summary: Azure Machine Learning now allows users to leverage their existing on-premises Kubernetes clusters for machine...\n",
+      "   YouTube: https://youtu.be/SvnKaxhNmMM?t=552\n",
+      "   Similarity: 0.837057672303841\n",
+      "   Speakers: Saurya Das\n",
+      " - Run Azure Machine Learning anywhere\n",
+      "   Summary: Saurya Das, a Product Manager in Azure Machine Learning, discusses running Azure Machine Learning anywhere...\n",
+      "   YouTube: https://youtu.be/SvnKaxhNmMM?t=0\n",
+      "   Similarity: 0.836100666919596\n",
+      "   Speakers: Saurya Das\n",
+      " - Run Azure Machine Learning anywhere\n",
+      "   Summary: Azure Portal allows users to track and manage on-premises and cloud clusters in a single...\n",
+      "   YouTube: https://youtu.be/SvnKaxhNmMM?t=184\n",
+      "   Similarity: 0.8338000990325234\n",
+      "   Speakers: Saurya Das\n",
+      " - Global AI Bootcamp Keynote\n",
+      "   Summary: Azure offers a comprehensive range of AI solutions, from Azure machine learning to cognitive services,...\n",
+      "   YouTube: https://youtu.be/gE7BO5rgEHE?t=183\n",
+      "   Similarity: 0.831873086054789\n",
+      "   Speakers: Eric Boyd\n",
+      " - Machine Learning and Scientific Computing with Python\n",
+      "   Summary: Developers are creating Jupyter responders that allow users to access their Met Office data through...\n",
+      "   YouTube: https://youtu.be/KtHmcx3t7HI?t=554\n",
+      "   Similarity: 0.8317285701795697\n",
+      "   Speakers: Tania Allard\n",
+      "\n",
+      "Videos similar to 'Pizza':\n"
+     ]
+    }
+   ],
    "source": [
     "pd_vectors = load_dataset(DATASET_NAME)\n",
     "\n",
@@ -192,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
