--- a/09-building-image-applications/python/oai-assignment.ipynb
+++ b/09-building-image-applications/python/oai-assignment.ipynb
@@ -119,18 +119,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: python-dotenv in c:\\users\\mikea\\miniconda3\\lib\\site-packages (1.0.1)\n",
+      "Requirement already satisfied: openai in c:\\users\\mikea\\miniconda3\\lib\\site-packages (1.35.13)\n",
+      "Requirement already satisfied: pillow in c:\\users\\mikea\\miniconda3\\lib\\site-packages (10.4.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\mikea\\miniconda3\\lib\\site-packages (2.32.2)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (4.4.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (0.27.0)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (2.8.2)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (4.66.4)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.7 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from openai) (4.12.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from requests) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from requests) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from requests) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from requests) (2024.6.2)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (1.0.5)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.20.1 in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (2.20.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\mikea\\miniconda3\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n"
+     ]
+    }
+   ],
    "source": [
     "# create virtual env\n",
-    "! python3 -m venv venv\n",
-    "# activate environment\n",
-    "! source venv/bin/activate\n",
+    "! python -m venv venv\n",
+    "# Activate virtual environment\n",
+    "! venv\\Scripts\\activate\n",
     "# install libraries\n",
     "# pip install -r requirements.txt, if using a requirements.txt file \n",
     "! pip install python-dotenv openai pillow requests"
@@ -309,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
